--- a/index_1.html
+++ b/index_1.html
@@ -96,6 +96,8 @@
     </main>
     <!-- fermeture main JOUEUR+ COMPUTER-->
 
+    <button type="button" id="playAgain">Rejouer</button> 
+
 
 
     <!-- CONTAINER PRINCIPALE -->
