--- a/index_1.html
+++ b/index_1.html
@@ -106,9 +106,9 @@
       <section class="fushimi-section">
         <!-- IMG -->
         <div class="fushimi-img">
-          <img src="assets/img/pierre.gif" alt="" id="pierre" class="widget">
-          <img src="assets/img/feuille.gif" alt="" id="feuille" class="widget">
-          <img src="assets/img/ciseaux.gif" alt="" id="ciseaux" class="widget">
+          <img src="assets/img/pierre.gif" alt="" id="0" class="widget">
+          <img src="assets/img/feuille.gif" alt="" id="1" class="widget">
+          <img src="assets/img/ciseaux.gif" alt="" id="2" class="widget">
          
   
         </div>
